accessibility improvement to reset link

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <section class="hidden" id="wrapper">
                 <textarea id="output"></textarea>
                 <p>
-                    <a onclick="reset()">Reset</button>
+                    <a href="#" onclick="reset()">Reset</button>
                 </p>                
             </section>
         </div>
