--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 background-color: darkslategray;
             }                   
             body {
-                /* background-attachment: fixed;
+                background-attachment: fixed;
                 background-image: url('background.svg');
                 background-position: right 10% bottom 20%;
                 background-repeat: no-repeat;
